--- a/FlaskBlog/templates/layout.html
+++ b/FlaskBlog/templates/layout.html
@@ -31,8 +31,9 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="/account">{{ current_user.username }}</a>
-                <a class="nav-item nav-link" href="/logout">Logout</a>
+                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">Create New Post</a>
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.username }}</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                 {% else %}
                   <a class="nav-item nav-link" href="/login">Login</a>
                   <a class="nav-item nav-link" href="/register">Register</a>
